--- a/MedicineGuru/app/src/main/res/values/strings.xml
+++ b/MedicineGuru/app/src/main/res/values/strings.xml
@@ -6,6 +6,16 @@
     <string name="card1detail">Get medicines deliverd at your door steps without any hastle</string>
     <string name="card2detail">No need to get around to pharmacies</string>
     <string name="card3detail">Upload prescription and get medicine them anywhere you want</string>
+    <string name="facebook_application_id" translatable="false">226143411262381</string>
+    <string name="facebook_app_id">226143411262381</string>
+    <string name="fb_login_protocol_scheme">fb226143411262381</string>
+    <string name="title_activity_main">MainActivity</string>
 
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="action_settings">Settings</string>
+    <string name="sign_in_cancelled">Authentication error access denied</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="unknown_error">Unknown error occured</string>
 </resources>
