Change Product Activity to Fragment
Change displaying product via fragment as compare to activity. Include
Product in menu and create seperate product view class and layout

--- a/MedicineGuru/app/src/main/res/values/strings.xml
+++ b/MedicineGuru/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="sign_in_cancelled">Authentication error access denied</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="unknown_error">Unknown error occured</string>
+    <string name="portrait_message">This is Portrait mode fragment</string>
 </resources>
