--- a/MedicineGuru/app/src/main/res/values/strings.xml
+++ b/MedicineGuru/app/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="medicine_title">Title</string>
     <string name="medicine_description">Description</string>
     <string name="medicine_size">Size</string>
+    <string name="medicine_price">Price</string>
     <string name="medicine_color">Select Color</string>
     <string name="medicine_form">Select form</string>
     <string name="upload_medicine_img">Upload Image</string>
