--- a/MedicineGuru/app/src/main/res/values/strings.xml
+++ b/MedicineGuru/app/src/main/res/values/strings.xml
@@ -33,7 +33,10 @@
         <item>Square</item>
         <item>Custom</item>
     </array>
+    <array name="admin_list">
+        <item>brinderjitsingh30@gmail.com</item>
 
+    </array>
     <string name="title_activity_insert_medicine">InsertMedicineActivity</string>
     <string name="insert_medicine_title">Enter Medicine Details</string>
     <string name="medicine_price">Price</string>
@@ -107,4 +110,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
